--- a/code/pa01.md
+++ b/code/pa01.md
@@ -59,7 +59,7 @@ histogram(~steps, data = day.sum,
           xlab = "Daily Total Number of Steps")
 ```
 
-![plot of chunk DailyTotalNumberofSteps](figure/DailyTotalNumberofSteps.png?raw=true) 
+![plot of chunk DailyTotalNumberofSteps](../figure/DailyTotalNumberofSteps.png) 
 
 2. Calculate and report the mean and median total number of steps taken per day
 
@@ -105,7 +105,7 @@ xyplot(steps ~ time, data = time.sum, type = "l",
        main = "Average Number of Steps")
 ```
 
-![plot of chunk AverageDailyActivityPattern](figure/AverageDailyActivityPattern.png?raw=true) 
+![plot of chunk AverageDailyActivityPattern](../figure/AverageDailyActivityPattern.png) 
 
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
@@ -174,7 +174,7 @@ histogram(~steps2, data = day.sum,
           xlab = "Daily Total Number of Steps")
 ```
 
-![plot of chunk DailyTotalNumberofSteps(Modified)](figure/DailyTotalNumberofSteps(Modified).png?raw=true) 
+![plot of chunk DailyTotalNumberofSteps(Modified)](../figure/DailyTotalNumberofSteps(Modified).png) 
 
 Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
@@ -224,6 +224,6 @@ xyplot(steps2 ~ time | dayType, data = week.sum,
        ylab = "steps")
 ```
 
-![plot of chunk AverageWeeklyActivityPattern](figure/AverageWeeklyActivityPattern.png?raw=true) 
+![plot of chunk AverageWeeklyActivityPattern](../figure/AverageWeeklyActivityPattern.png) 
 
 # --- End ---
